# speccy

./: .editorconfig  .gitignore  .rustfmt.toml  AGENTS.md  CODEX-SKILLS-AND-SUBAGENTS.md  Cargo.toml  README.md  clippy.toml  deny.toml  dprint.json  justfile
.agents/skills/speccy-amend/: SKILL.md
.agents/skills/speccy-bootstrap/: SKILL.md
.agents/skills/speccy-brainstorm/: SKILL.md
.agents/skills/speccy-holistic-gate/: SKILL.md
.agents/skills/speccy-init/: SKILL.md
.agents/skills/speccy-orchestrate/: SKILL.md
.agents/skills/speccy-plan/: SKILL.md
.agents/skills/speccy-review/: SKILL.md
.agents/skills/speccy-ship/: SKILL.md
.agents/skills/speccy-tasks/: SKILL.md
.agents/skills/speccy-vet/: SKILL.md
.agents/skills/speccy-work/: SKILL.md
.agents/speccy-references/: evidence.md  journal-blockers.md  journal-implementer.md  journal-review.md  reconcile-policy.md
.claude/agents/: holistic-implementer.md  holistic-reviewer.md  plan-architect.md  plan-explorer.md  reviewer-architecture.md  reviewer-business.md  reviewer-correctness.md  reviewer-docs.md  reviewer-security.md  reviewer-style.md  reviewer-tests.md  speccy-decompose.md  speccy-holistic-fixer.md  speccy-holistic-reviewer.md  speccy-ship.md  speccy-tasks.md  speccy-work.md  vet-implementer.md  vet-provenance.md  vet-reviewer.md  vet-simplifier.md
.claude/commands/speccy/: amend.md  review.md  (+1 more)
.claude/speccy-references/: evidence.md  journal-blockers.md  journal-implementer.md  journal-review.md  reconcile-policy.md  retry-shape.md
.codex/agents/: holistic-implementer.toml  holistic-reviewer.toml  plan-architect.toml  plan-explorer.toml  reviewer-architecture.toml  reviewer-business.toml  reviewer-correctness.toml  reviewer-docs.toml  reviewer-security.toml  reviewer-style.toml  reviewer-tests.toml  speccy-decompose.toml  speccy-ship.toml  speccy-tasks.toml  speccy-work.toml  vet-implementer.toml  vet-provenance.toml  vet-reviewer.toml  vet-simplifier.toml
.github/workflows/: ci.yml
.speccy/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  IMPLEMENTATION_ORDER.md  MEMORY.md  PLANNING.md  PROMPT.md  VISION.md  speccy.toml  transcript_Missions Multi-Agent Systems That Ship for Days — Luke Alvoeiro, Factory.txt  transcript_The Build System Mission Impossible with Eno Reyes, CTO Factory AI.txt
crates/speccy/: Cargo.toml  README.md
crates/speccy-core/: Cargo.toml  README.md
crates/speccy-core/src/: error.rs  lib.rs
crates/speccy-core/src/lint/: mod.rs  registry.rs  types.rs
crates/speccy-core/src/lint/rules/: req.rs  tsk.rs
crates/speccy-core/src/parse/: cross_ref.rs  mod.rs  toml_files.rs
crates/speccy-core/tests/: lint_fixtures.rs  lint_qst.rs  lint_registry.rs  lint_req.rs  lint_run.rs  lint_spc.rs  lint_tsk.rs  lint_val.rs  workspace_scan.rs
crates/speccy-core/tests/fixtures/lint/qst-001-open-question/: SPEC.md
crates/speccy-core/tests/fixtures/lint/req-001-empty-checks/: SPEC.md  spec.toml
crates/speccy-core/tests/fixtures/lint/spc-002-missing-from-toml/: spec.toml
crates/speccy-core/tests/lint_common/: mod.rs
crates/speccy-core/tests/snapshots/: lint_registry.snap
crates/speccy/src/: git.rs  lib.rs  main.rs  status.rs
crates/speccy/tests/: git_repo_sha.rs  status_json.rs  status_lint_integration.rs  status_text_filter.rs  status_text_render.rs
crates/speccy/tests/common/: mod.rs
docs/: ARCHITECTURE.md  CLI.md  SCHEMA.md  WORKFLOW.md
skills/claude-code/: speccy-amend.md  speccy-init.md  speccy-plan.md  speccy-review.md  speccy-ship.md  speccy-tasks.md  speccy-work.md
skills/codex/: speccy-amend.md  speccy-init.md  speccy-plan.md  speccy-review.md  speccy-ship.md  speccy-tasks.md  speccy-work.md
speccy-cli/: Cargo.toml  README.md
speccy-cli/src/: archive.rs  check.rs  check_selector.rs  context.rs  context_output.rs  cwd.rs  embedded.rs  git.rs  host.rs  implement.rs  init.rs  journal.rs  journal_show.rs  journal_show_output.rs  lib.rs  lock.rs  main.rs  next.rs  next_output.rs  paths.rs  plan.rs  render.rs  report.rs  review.rs  shell.rs  status.rs  status_output.rs  tasks.rs  transition.rs  vacancy.rs  verify.rs  verify_output.rs
speccy-cli/src/templates/: VISION.md.tmpl  speccy.toml.tmpl
speccy-cli/tests/: archive_invisibility.rs  archive_json.rs  archive_text.rs  archive_warnings.rs  authoring_commit.rs  check.rs  check_selector.rs  ci_workflow.rs  consistency.rs  context.rs  embedded.rs  git_diff.rs  git_repo_sha.rs  implement.rs  init.rs  init_phase_agents.rs  init_three_way.rs  integration_status.rs  journal_append.rs  journal_append_vet.rs  journal_show.rs  lint_vet.rs  lock.rs  memory_feedforward.rs  next_derived.rs  next_json.rs  next_text.rs  persona_snippets.rs  pin_shape.rs  plan.rs  report.rs  resource_prose_hygiene.rs  review.rs  review_redaction.rs  schema_envelope.rs  shipped_skills_no_legacy_markers.rs  skill_body_discovery.rs  skill_packs.rs  skill_stub_shape.rs  status_include_archive.rs  (+13 more)
speccy-cli/tests/common/: mod.rs
speccy-core/: Cargo.toml  README.md
speccy-core/src/: consistency.rs  context.rs  error.rs  exec.rs  lib.rs  next.rs  personas.rs  task_lookup.rs  tasks.rs  workspace.rs
speccy-core/tests/: consistency_detect.rs  docs_sweep.rs  exec_captured.rs  id_alloc.rs  in_tree_spec_tomls.rs  in_tree_specs.rs  in_tree_tasks_reports.rs  lint_fixtures.rs  lint_jnl.rs  lint_qst.rs  lint_registry.rs  lint_req.rs  lint_run.rs  lint_spc.rs  lint_tsk.rs  lint_val.rs  lint_xml.rs  next_priority.rs  personas.rs  pin_shape.rs  prompt_agents_md.rs  prompt_budget.rs  prompt_mission_md.rs  prompt_render.rs  prompt_template.rs  raw_retention.rs  report_xml_roundtrip.rs  skill_stub_shape.rs  spec_markers_roundtrip.rs  spec_xml_roundtrip.rs  stale_detection.rs  task_lookup.rs  task_state_aggregation.rs  task_xml_body_items.rs  task_xml_roundtrip.rs  tasks_commit.rs  workspace_find_root.rs  workspace_loader.rs  workspace_scan.rs  workspace_supersession.rs  (+1 more)
speccy-core/tools/migrate_tasks_schema/: Cargo.toml  README.md
speccy-core/tools/migrate_tasks_schema/src/: lib.rs  main.rs
speccy-core/tools/migrate_tasks_schema/tests/: migration.rs
(+1192 files in other folders)
