[workspace]
members = ["speccy-cli", "speccy-core"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kvnxiao/speccy"
version = "0.1.0"

[workspace.dependencies]
camino = "1.1"
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.52", default-features = false }
fs-err = "3.1"
include_dir = "0.7"
jiff = { version = "0.2", default-features = false, features = ["std", "serde"] }
minijinja = "2"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde-saphyr is pre-0.1.0; pin exact patch and accept future refactor when
# 0.1.0 stabilises (per .speccy/ARCHITECTURE.md "Parsing stack" and DEC-002).
serde-saphyr = "=0.0.26"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.9"

# Dev dependencies shared across the workspace.
assert_cmd = "2.0"
indoc = "2.0"
predicates = "3.1"
tempfile = "3.14"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Groups
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Cargo group escape hatch
multiple_crate_versions = "allow"

# Don't panic
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
string_slice = "deny"
indexing_slicing = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
unchecked_time_subtraction = "deny"
todo = "warn"
unimplemented = "warn"

# Don't fail silently
let_underscore_future = "deny"
let_underscore_must_use = "deny"
unused_result_ok = "deny"
map_err_ignore = "deny"
assertions_on_result_states = "deny"

# Async correctness
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
if_let_mutex = "deny"
large_futures = "deny"

# Unsafe hygiene
mem_forget = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unnecessary_safety_doc = "deny"
unnecessary_safety_comment = "deny"

# Float correctness
float_cmp = "deny"
float_cmp_const = "deny"
lossy_float_literal = "deny"
invalid_upcast_comparisons = "deny"

# Misc footguns
rc_mutex = "deny"
debug_assert_with_mut_call = "deny"
iter_not_returning_iterator = "deny"
expl_impl_clone_on_copy = "deny"
infallible_try_from = "deny"
dbg_macro = "deny"

# Force #[expect(..., reason = "...")] over silent #[allow]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

# Performance
large_enum_variant = "warn"
large_stack_arrays = "deny"
needless_pass_by_value = "warn"

# Style
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
