[package]
name = "speccy-core"
description = "Parsers, lint engine, and prompt-rendering primitives for the Speccy CLI."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"
keywords = ["speccy", "cli", "spec", "feedback", "tooling"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
camino = { workspace = true }
comrak = { workspace = true }
fs-err = { workspace = true }
jiff = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde-saphyr = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
