[package]
name = "migrate-tasks-schema"
description = "Private one-shot migration tool for SPEC-0029: convert TASKS.md legacy markdown-bullet conventions to the XML schema."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "migrate-tasks-schema"
path = "src/main.rs"

[lib]
name = "migrate_tasks_schema"
path = "src/lib.rs"

[dependencies]
camino = { workspace = true }
fs-err = { workspace = true }
regex = { workspace = true }
speccy-core = { path = "../..", version = "0.1.0" }
thiserror = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
